--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -120,6 +120,8 @@
    .nav__top
       position: relative
       padding-right: 80px
+   .news-item__top .news-item__link
+      right: 0
    .header__box 
       padding: 110px 0 146px
    .header__bg
@@ -226,6 +228,8 @@
       margin-right: 25px
    .about__geo 
       display: none
+   .use__new
+      padding-top: 40px
 @media ( max-width: 991px )
    input, textarea, select
       -webkit-appearance: none
@@ -445,9 +449,13 @@
          display: block
    .header__box
       padding: 80px 0 120px
+      margin-bottom: -100px
    .header__bg
       left: -82%
       width: 183%
+      top: -113px
+      height: 127%
+      opacity: 0.4
    .item h2
       margin-bottom: 25px
    .item__name
@@ -531,7 +539,10 @@
       margin-bottom: 20px
    .use__row
       margin-top: 200px
+      padding-top: 0
       justify-content: center
+   .use__img_1
+      top: -159px
    .use__row p
       font-size: 28px
       left: 20%
@@ -731,3 +742,18 @@
       margin-bottom: 60px
    .about__bottom:before, .about__line:before
       display: none
+   .nav 
+      background: white 
+      position: relative
+      z-index: 50
+   .catalog-item h2, .curtains-item__wrap h2, .rem-item__bottom h2
+      font-size: 27px
+   .page h1
+      font-size: 30px
+   .news-item__link_2
+      top: -13px
+   .rem-item__box_2
+      margin-top: 0
+   .main
+      padding-bottom: 50px
+      overflow: hidden
